# Conways-Game-of-Life

./: Cargo.toml  PATRONES.md  README.md
examples/: colorful_life.rs  custom_population.rs  flowers.rs  high_resolution.rs
src/: framebuffer.rs  game_of_life.rs  main.rs
